# compression

./: .gitignore  CMakeLists.txt  README.md  cnat.cu  main.cpp
cmake/: FindSSE.cmake
hls/: compress.cpp  compress.hpp  compress_test.cpp
include/: aligned_allocator.h  cxxopts.h  simdxorshift128plus.h
